more css scrollbar height fixes

--- a/client/stylesheets/_mixins.scss
+++ b/client/stylesheets/_mixins.scss
@@ -57,7 +57,7 @@
   height: 85%;
   width: 410px;
   margin: auto;
-  padding: 10px 15px 20% 15px;
+  padding: 10px 15px 35% 15px;
 
   > div {
     width: 100%;
